// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntryFiles should get entry module: (Output File Strategy "members") (Option Group "1") 1`] = `
"**@scope/entryfile** • **Documentation**

***

# entry-module

## Index

### Classes

- [ModuleClass](entry-module/classes/ModuleClass.mdx)
"
`;

exports[`EntryFiles should get entry module: (Output File Strategy "members") (Option Group "2") 1`] = `
"**@scope/entryfile** • **Documentation**

***

# entry-module

## Index

### Classes

- [ModuleClass](entry-module/classes/ModuleClass.mdx)
"
`;

exports[`EntryFiles should get module member for members: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**@scope/entryfile**](../../README.mdx) • **Documentation**

***

[@scope/entryfile](../../modules.mdx) / ModuleClass

# Class: ModuleClass

## Constructors

### new ModuleClass()

> **new ModuleClass**(): [\`ModuleClass\`](ModuleClass.mdx)

#### Returns

[\`ModuleClass\`](ModuleClass.mdx)
"
`;

exports[`EntryFiles should get module member for members: (Output File Strategy "members") (Option Group "2") 1`] = `
"[**@scope/entryfile**](../../index.mdx) • **Documentation**

***

[@scope/entryfile](../../modules.mdx) / ModuleClass

# Class: ModuleClass

## Constructors

### new ModuleClass()

> **new ModuleClass**(): [\`ModuleClass\`](ModuleClass.mdx)

#### Returns

[\`ModuleClass\`](ModuleClass.mdx)
"
`;

exports[`EntryFiles should get readme file: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**@scope/entryfile**](README.mdx) • [**Documentation**](README.mdx)

***

[@scope/entryfile](modules.mdx) / @scope/entryfile

# MY README

> Some block quote

Some text.

## Readme heading

Some text.
"
`;
